--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -67,7 +67,10 @@ const moreWaysToLearn = [
     <p slot="description">
       At The League of Amazing Programmers, we prepare kids for the science and
       technology careers of the 21st century through a multi-level program of
-      weekly classes up to industry certification.
+      weekly classes up to industry certification. We offer
+      <a href="#weekly-programming-classes">weekly coding classes</a>,
+      <a href="#free-classes">free Tech Club meetings</a>, and
+      <a href="#more-ways-to-learn">many other ways to learn</a>.
     </p>
     <img
       slot="media"
@@ -78,6 +81,7 @@ const moreWaysToLearn = [
   </HeroSection>
 
   <Section
+    id="weekly-programming-classes"
     startBgcolor="var(--color-peach-strong)"
     endBgcolor="var(--color-peach-strong)"
   >
@@ -186,6 +190,7 @@ const moreWaysToLearn = [
   </Section>
 
   <Section
+    id="free-classes"
     startBgcolor="var(--color-peach-strong)"
     endBgcolor="var(--color-peach-strong)"
   >
@@ -273,7 +278,11 @@ const moreWaysToLearn = [
     </CardGrid>
   </Section>
 
-  <Section class="section--support" sectionClass="home-more-ways">
+  <Section
+    id="more-ways-to-learn"
+    class="section--support"
+    sectionClass="home-more-ways"
+  >
     <SectionHeader>
       <h2>More Ways to Learn</h2>
       <p>
